unpackaged/main/default/objects/Contact/fields/Lifecycle_Status__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Status__c</fullName>
    <label>Lifecycle Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lifecycle_Status</valueSetName>
    </valueSet>
</CustomField>