unpackaged/main/default/objects/Contact/fields/Linkedin_Bio__c.field-meta.xml
<CustomField>
    <fullName>Linkedin_Bio__c</fullName>
    <label>Linkedin Bio</label>
    <type>Url</type>
</CustomField>