unpackaged/main/default/objects/Contact/fields/LinkedIn_Search__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Search__c</fullName>
    <formula>hyperlink(&quot;https://www.linkedin.com/pub/dir/?first=&quot;&amp;FirstName&amp;&quot;&amp;last=&quot;&amp;LastName&amp;&quot;&amp;search=Search&quot;, &#39;Search LinkedIn for &#39;&amp;FirstName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LinkedIn Search</label>
    <type>Text</type>
</CustomField>