unpackaged/main/default/objects/Contact/fields/Lotame_Hashed_Email__c.field-meta.xml
<CustomField>
    <fullName>Lotame_Hashed_Email__c</fullName>
    <description>R1810999</description>
    <label>Lotame Hashed Email</label>
    <type>TextArea</type>
</CustomField>