unpackaged/main/default/objects/Contact/fields/Marketing_Engaged_Lead__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Engaged_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R1916824</description>
    <label>Marketing Engaged Lead</label>
    <type>Checkbox</type>
</CustomField>