unpackaged/main/default/objects/Contact/fields/Marketo_Marketable_Segment__c.field-meta.xml
<CustomField>
    <fullName>Marketo_Marketable_Segment__c</fullName>
    <description>IM, PM, MC; R2026734; Edited: Marketo Integration</description>
    <label>Marketo Marketable Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketo_Marketable_Segment</valueSetName>
    </valueSet>
</CustomField>