unpackaged/main/default/objects/Contact/fields/MC_Login_ID__c.field-meta.xml
<CustomField>
    <fullName>MC_Login_ID__c</fullName>
    <description>R177616</description>
    <label>Login ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>