unpackaged/main/default/objects/Contact/fields/Microsoft_Click_ID__c.field-meta.xml
<CustomField>
    <fullName>Microsoft_Click_ID__c</fullName>
    <description>Marketing field</description>
    <label>Microsoft Click ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>