unpackaged/main/default/objects/Contact/fields/Migration_Delete__c.field-meta.xml
<CustomField>
    <fullName>Migration_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Migration Delete</label>
    <type>Checkbox</type>
</CustomField>