unpackaged/main/default/objects/Contact/fields/mkto71_Inferred_State_Region__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Inferred_State_Region__c</fullName>
    <description>R165544</description>
    <label>Inferred State Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>