unpackaged/main/default/objects/Contact/fields/mkto71_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Lead_Score__c</fullName>
    <description>R165544</description>
    <label>Lead Score</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>