unpackaged/main/default/objects/Contact/fields/mkto71_Original_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Original_Source_Type__c</fullName>
    <description>R165544</description>
    <label>Original Source Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>