unpackaged/main/default/objects/Contact/fields/Mops_xid__c.field-meta.xml
<CustomField>
    <fullName>Mops_xid__c</fullName>
    <description>Marketing Field</description>
    <label>Mops_xid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>