unpackaged/main/default/objects/Contact/fields/Most_Recent_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Lead_Score__c</fullName>
    <description>R177951</description>
    <label>Most Recent Lead Score</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>