unpackaged/main/default/objects/Contact/fields/Most_Recent_MEL_Before_Opp_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_MEL_Before_Opp_Date__c</fullName>
    <description>R1916824</description>
    <label>Most Recent MEL Before Opp Date</label>
    <type>DateTime</type>
</CustomField>