unpackaged/main/default/objects/Contact/fields/Most_Recent_MQL_Before_Opp_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_MQL_Before_Opp_Date__c</fullName>
    <description>Created by R152223

DO NOT EDIT
Used in Process
Update MQL Fields on Contact
Used in Process 
Update Contact MQL Info From Lead Convert</description>
    <label>APM Most Recent MQL Before Opp Date</label>
    <type>DateTime</type>
</CustomField>