unpackaged/main/default/objects/Contact/fields/Most_Recent_MQL_before_Opp_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_MQL_before_Opp_Program_Name__c</fullName>
    <description>Created by R152785</description>
    <label>APM Recent MQL before Opp Program Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>