unpackaged/main/default/objects/Contact/fields/My_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>My_Case_ID__c</fullName>
    <label>My Case ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>