unpackaged/main/default/objects/Contact/fields/MyCase_Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Customer_Status__c</fullName>
    <label>MyCase Customer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketing_Customer_Status</valueSetName>
    </valueSet>
</CustomField>