unpackaged/main/default/objects/Contact/fields/MyCase_Status_NEW__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Status_NEW__c</fullName>
    <description>R1811112</description>
    <formula>Account.MyCase_Status_NEW__c</formula>
    <label>MyCase Status NEW</label>
    <type>Text</type>
</CustomField>