unpackaged/main/default/objects/Contact/fields/New_MQL_Date__c.field-meta.xml
<CustomField>
    <fullName>New_MQL_Date__c</fullName>
    <description>Field used by the Underwriting Team to reassign Self-Serve MQLs to sales reps</description>
    <label>New MQL Date</label>
    <type>Date</type>
</CustomField>