unpackaged/main/default/objects/Contact/fields/New_MQL_Type__c.field-meta.xml
<CustomField>
    <fullName>New_MQL_Type__c</fullName>
    <description>Field used by the Underwriting Team to reassign Self-Serve MQLs to sales reps</description>
    <label>New MQL Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MQL_Type</valueSetName>
    </valueSet>
</CustomField>