unpackaged/main/default/objects/Contact/fields/Next_Step_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Date__c</fullName>
    <description>Used by Sales when managing MQLs. Mapped to Opportunity upon conversion.</description>
    <label>Next Step Date</label>
    <type>Date</type>
</CustomField>