unpackaged/main/default/objects/Contact/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <description>Used by Sales to indicate the next action to take with a Contact. Mapped to Opportunity upon conversion.</description>
    <label>Next Steps</label>
    <type>TextArea</type>
</CustomField>