unpackaged/main/default/objects/Contact/fields/Nurture_Marketing_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Marketing_Reasons__c</fullName>
    <label>Marketing Nurture Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Nurture_Marketing_Reasons</valueSetName>
    </valueSet>
</CustomField>