unpackaged/main/default/objects/Contact/fields/On_Boarding_Contact_Primary__c.field-meta.xml
<CustomField>
    <fullName>On_Boarding_Contact_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R165599</description>
    <inlineHelpText>Checked if the contact is associated with a V+ Payments record.</inlineHelpText>
    <label>On-Boarding Contact (Primary)</label>
    <type>Checkbox</type>
</CustomField>