unpackaged/main/default/objects/Contact/fields/Original_Lead_Channel__c.field-meta.xml
<CustomField>
    <fullName>Original_Lead_Channel__c</fullName>
    <label>Original Lead Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Channel</valueSetName>
    </valueSet>
</CustomField>