unpackaged/main/default/objects/Contact/fields/Original_MEL_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_MEL_Date__c</fullName>
    <description>R1916824</description>
    <label>Original MEL Date</label>
    <type>DateTime</type>
</CustomField>