unpackaged/main/default/objects/Contact/fields/Original_MQL_Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_MQL_Channel_Name__c</fullName>
    <description>Created by R152785</description>
    <label>APM Original MQL Channel Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>