unpackaged/main/default/objects/Contact/fields/Original_MQL_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_MQL_Date__c</fullName>
    <description>Created by R152223

DO NOT EDIT
Used in Process
Update MQL Fields on Contact
Used in Process 
Update Contact MQL Info From Lead Convert</description>
    <label>APM Original MQL Date</label>
    <type>DateTime</type>
</CustomField>