unpackaged/main/default/objects/Contact/fields/Outbound_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Assigned_Date__c</fullName>
    <description>Date lead/contact was assigned for outbound</description>
    <inlineHelpText>Date lead/contact was assigned for outbound</inlineHelpText>
    <label>Outbound Assigned Date</label>
    <type>Date</type>
</CustomField>