unpackaged/main/default/objects/Contact/fields/Outbound_Reason__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Reason__c</fullName>
    <label>Outbound Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Lead_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Outbound_Reason</valueSetName>
    </valueSet>
</CustomField>