unpackaged/main/default/objects/Contact/fields/Outreach_Current_Sequence_Status__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Current_Sequence_Status__c</fullName>
    <label>Current Sequence Status</label>
    <type>TextArea</type>
</CustomField>