unpackaged/main/default/objects/Contact/fields/Outreach_Sync__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The purpose of this field is to help trigger the sync process between Outreach and SFDC for the first import.</description>
    <label>Outreach Sync</label>
    <type>Checkbox</type>
</CustomField>