unpackaged/main/default/objects/Contact/fields/Owner_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Profile_Name__c</fullName>
    <formula>Owner.Profile.Name</formula>
    <label>Owner Profile Name</label>
    <type>Text</type>
</CustomField>