unpackaged/main/default/objects/Contact/fields/Owner_Sales_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Owner_Sales_Manager_Email__c</fullName>
    <description>Created for R163669</description>
    <label>Owner Sales Manager Email</label>
    <type>Email</type>
</CustomField>