unpackaged/main/default/objects/Contact/fields/Owner_Same__c.field-meta.xml
<CustomField>
    <fullName>Owner_Same__c</fullName>
    <formula>IF( OwnerId = Account.OwnerId , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Same</label>
    <type>Checkbox</type>
</CustomField>