unpackaged/main/default/objects/Contact/fields/Owner_Slack_ID__c.field-meta.xml
<CustomField>
    <fullName>Owner_Slack_ID__c</fullName>
    <formula>Owner.Slack_ID__c</formula>
    <label>Owner Slack ID</label>
    <type>Text</type>
</CustomField>