unpackaged/main/default/objects/Contact/fields/Partner_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account_Number__c</fullName>
    <inlineHelpText>Completed by the prospect on a partner web page.</inlineHelpText>
    <label>Partner Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>