unpackaged/main/default/objects/Contact/fields/Person_Master_ID__c.field-meta.xml
<CustomField>
    <fullName>Person_Master_ID__c</fullName>
    <description>Unique ID used to Identify the person. May be created from a lead and follow or created directly on the contact record</description>
    <label>Person Master ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>