unpackaged/main/default/objects/Contact/fields/PPCS__c.field-meta.xml
<CustomField>
    <fullName>PPCS__c</fullName>
    <description>#4730</description>
    <label>PPCS</label>
    <length>150</length>
    <type>Text</type>
</CustomField>