unpackaged/main/default/objects/Contact/fields/Primary_Practice_Area__c.field-meta.xml
<CustomField>
    <fullName>Primary_Practice_Area__c</fullName>
    <formula>TEXT( Account.Primary_Practice_Area__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the primary practice area identified on the firm (account).</inlineHelpText>
    <label>Primary Practice Area</label>
    <type>Text</type>
</CustomField>