unpackaged/main/default/objects/Contact/fields/Primary_Referral_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Primary_Referral_Partnership__c</fullName>
    <formula>Account.Primary_Referral_Partnership__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reflects the Primary Referral Partnership name identified on the related account</inlineHelpText>
    <label>Primary Referral Partnership</label>
    <type>Text</type>
</CustomField>