unpackaged/main/default/objects/Contact/fields/Qualifying_Team__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Team__c</fullName>
    <label>Qualifying Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Qualifying_Team</valueSetName>
    </valueSet>
</CustomField>