unpackaged/main/default/objects/Contact/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>The rating of the Contact in Marketo (represented as a Lead in Marketo). This information is synced.</description>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Sales Campaign</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>