unpackaged/main/default/objects/Contact/fields/Referral_Partnership_Channel__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partnership_Channel__c</fullName>
    <formula>IF(
  ISBLANK(Referral_Partnership__c),
  &quot;Direct&quot;,
  CASE(
     Referral_Partnership__r.RecordType.Name,
    &quot;Affinity&quot;, &quot;Affinity&quot;,
    &quot;ISV Partner&quot;, &quot;Tech Partner&quot;,
    &quot;Consultant&quot;, &quot;Tech Partner&quot;,
    &quot;Other&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Partnership Channel</label>
    <type>Text</type>
</CustomField>