unpackaged/main/default/objects/Contact/fields/RingLead_Merge_Date__c.field-meta.xml
<CustomField>
    <fullName>RingLead_Merge_Date__c</fullName>
    <label>RingLead Merge Date</label>
    <type>DateTime</type>
</CustomField>