unpackaged/main/default/objects/Contact/fields/Round_Robin_Locked__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used a flag field to exclude record from passing into the round robin assignment</description>
    <inlineHelpText>When checked, record will be excluded round robin assignment via automated processes</inlineHelpText>
    <label>Round Robin Locked</label>
    <type>Checkbox</type>
</CustomField>