unpackaged/main/default/objects/Contact/fields/SAL_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>SAL_Date_Time__c</fullName>
    <description>Date and Time contact was sales accepted</description>
    <label>SAL Date Time</label>
    <type>DateTime</type>
</CustomField>