unpackaged/main/default/objects/Contact/fields/Sales_Brand__c.field-meta.xml
<CustomField>
    <fullName>Sales_Brand__c</fullName>
    <label>Sales Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brands</valueSetName>
    </valueSet>
</CustomField>