unpackaged/main/default/objects/Contact/fields/Sales_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Sales_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>