unpackaged/main/default/objects/Contact/fields/Sales_Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Lead_Type__c</fullName>
    <description>For distinguishing between outbound and inbound leads.</description>
    <label>Sales Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Lead_Type</valueSetName>
    </valueSet>
</CustomField>