unpackaged/main/default/objects/Contact/fields/Sales_Product_Tier__c.field-meta.xml
<CustomField>
    <fullName>Sales_Product_Tier__c</fullName>
    <label>Sales Product Tier</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Product_Line_Tier</valueSetName>
    </valueSet>
</CustomField>