unpackaged/main/default/objects/Contact/fields/Secondary_Practice_Areas__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Practice_Areas__c</fullName>
    <label>Secondary Practice Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Practice_Area</valueSetName>
    </valueSet>
</CustomField>