unpackaged/main/default/objects/Contact/fields/Send_Activation_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Activation_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE if activation email is sent to user added to trial by Sales</description>
    <label>Send Activation Email</label>
    <type>Checkbox</type>
</CustomField>