unpackaged/main/default/objects/Contact/fields/Software_Advice_Account__c.field-meta.xml
<CustomField>
    <fullName>Software_Advice_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R176888</description>
    <label>Software Advice Account</label>
    <type>Checkbox</type>
</CustomField>