unpackaged/main/default/objects/Contact/fields/Soluno_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Soluno_User_ID__c</fullName>
    <label>Soluno User ID</label>
    <length>55</length>
    <type>Text</type>
</CustomField>