unpackaged/main/default/objects/Contact/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Stage of qualification for the contact in the sales process</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Stage</valueSetName>
    </valueSet>
</CustomField>