unpackaged/main/default/objects/Contact/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The current status, as managed by Sales. This is mapped from Lead upon conversion.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Person_Status</valueSetName>
    </valueSet>
</CustomField>