unpackaged/main/default/objects/Contact/fields/SyncToMarketo__c.field-meta.xml
<CustomField>
    <fullName>SyncToMarketo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is to know the status of  sync to marketo.</description>
    <inlineHelpText>is Synced to Marketo?</inlineHelpText>
    <label>SyncToMarketo</label>
    <type>Checkbox</type>
</CustomField>