unpackaged/main/default/objects/Contact/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Soluno_Tags</valueSetName>
    </valueSet>
</CustomField>