unpackaged/main/default/objects/Contact/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <inlineHelpText>Displays the timezone selected for the record based initially on the record&#39;s phone but editable at any time by the end user.  Integrated with Outreach.</inlineHelpText>
    <label>Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IANA_Timezones</valueSetName>
    </valueSet>
</CustomField>