unpackaged/main/default/objects/Contact/fields/Twitter_Bio__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Bio__c</fullName>
    <label>Twitter Bio</label>
    <type>Url</type>
</CustomField>