unpackaged/main/default/objects/Contact/fields/Twitter_Link__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Link__c</fullName>
    <inlineHelpText>Add a link to the contact&#39;s Twitter page here.</inlineHelpText>
    <label>Twitter Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>