unpackaged/main/default/objects/Contact/fields/Twitter_Search__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Search__c</fullName>
    <formula>hyperlink(&quot;https://twitter.com/search/?q=&quot;&amp;FirstName&amp;&quot; &quot;&amp;LastName&amp;&quot;&amp;search=Search&quot;, &#39;Search Twitter for &#39;&amp;FirstName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Twitter Search</label>
    <type>Text</type>
</CustomField>