unpackaged/main/default/objects/Contact/fields/Unsubscribed_from_CPACharge__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribed_from_CPACharge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unsubscribed from CPACharge</label>
    <type>Checkbox</type>
</CustomField>