unpackaged/main/default/objects/Contact/fields/Unsubscribed_from_LawPay_Plus__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribed_from_LawPay_Plus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unsubscribed from LawPay Plus</label>
    <type>Checkbox</type>
</CustomField>