unpackaged/main/default/objects/Contact/fields/Unsubscribed_from_Soluno__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribed_from_Soluno__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unsubscribed from Soluno</label>
    <type>Checkbox</type>
</CustomField>