unpackaged/main/default/objects/Contact/fields/User_Title__c.field-meta.xml
<CustomField>
    <fullName>User_Title__c</fullName>
    <description>R1920135</description>
    <label>User Title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>