unpackaged/main/default/objects/Contact/fields/utm_initial_landing_page__c.field-meta.xml
<CustomField>
    <fullName>utm_initial_landing_page__c</fullName>
    <description>The URL of the landing page that the user lands on during their initial visit. The page they entered our website on.</description>
    <label>utm_initial_landing_page</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>