unpackaged/main/default/objects/Contact/fields/utm_initial_point_of_origin__c.field-meta.xml
<CustomField>
    <fullName>utm_initial_point_of_origin__c</fullName>
    <description>The URL that referred the visitor to us. Where they were before they landed on our website</description>
    <label>utm_initial_point_of_origin</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>