unpackaged/main/default/objects/Contact/fields/utm_name__c.field-meta.xml
<CustomField>
    <fullName>utm_name__c</fullName>
    <description>#4730</description>
    <label>utm_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>